--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
